# safepath-project

./: README.md  app.py  data.duckdb  loaders.py  main.py  pyproject.toml  routing.py  utils.py
data/: INDELING_WIJK.csv  criminaliteit-wijken-2023-3.csv  nodes.csv
pages/: feedback.py  routing.py
templates/: index.html
