[tool.poetry]
name = "safepath"
version = "0.1.0"
description = ""
authors = ["Ksenia Sycheva <k.sycheva@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.0.0"
streamlit = "^1.35.0"
streamlit-folium = "^0.20.0"
st-star-rating = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
